@@ -13,22 +13,29 @@ public class Particle : Rendering.IDrawable
 	private readonly Texture2D _sprite;
 	private readonly float _lifeTime;
 	private float _aliveTime;
-	
+	private readonly float _damping;
+	private float _rotationVel;
+	private readonly bool _fade;
 	public static readonly object syncobj = new object();
 
 	
 
 	public static readonly List<Particle> Objects = new List<Particle>();
+	
 
-	public Particle(Texture2D sprite,Vector2 position, Vector2 velocity, Vector2 acceleration, float lifeTime)
+
+	public Particle(Texture2D sprite,Vector2 position, Vector2 velocity, Vector2 acceleration, float rotationVel, float damping, float lifeTime, bool fade = true)
 	{
 		_transform = new Transform2();
-		this._sprite = sprite;//inefficient but fuck it
+		_sprite = sprite;//inefficient but fuck it
 		_transform.Position = position;
 		_transform.Scale = new Vector2(1, 1);
 		_velocity = velocity;
 		_acceleration = acceleration;
-		this._lifeTime = lifeTime;
+		_lifeTime = lifeTime;
+		_fade = fade;
+		_damping = damping;
+		_rotationVel = rotationVel;
 		lock (syncobj)
 		{
 			Objects.Add(this);
@@ -45,13 +52,17 @@ public class Particle : Rendering.IDrawable
 
 				// Update velocity by acceleration
 				obj._velocity += obj._acceleration * deltaTime;
-
+				//apply damping
+				obj._velocity *= obj._damping;
 				// Update position by velocity
 				obj._transform.Position += obj._velocity * deltaTime;
-
 				
 				obj._aliveTime += deltaTime;
 
+				obj._rotationVel *= obj._damping;
+				
+				obj._transform.Rotation += obj._rotationVel;
+				
 				if (obj._aliveTime > obj._lifeTime)
 				{
 					Objects.Remove(obj);
@@ -85,7 +96,13 @@ public class Particle : Rendering.IDrawable
 
 	public Color GetColor()
 	{
+		if (_fade)
+		{
+		
+			return Color.White * (1 - _aliveTime / _lifeTime);
+		}
 		return Color.White;
+		
 	}
 
 	public Visibility GetMinimumVisibility()
